Make method grid <canvas> tags block level. Fixes some alignment issues

--- a/src/Blueline/CCCBRDataBundle/Resources/public/css/default/methods.less
+++ b/src/Blueline/CCCBRDataBundle/Resources/public/css/default/methods.less
@@ -24,7 +24,7 @@
 	float: left;
 	margin: @contentYPadding 0;
 	text-rendering: optimizeSpeed;
-	svg {
+	svg, canvas {
 		display: block;
 	}
 }
